--- a/views/owner/login.html
+++ b/views/owner/login.html
@@ -67,8 +67,8 @@
     </div>
     <!-- /.social-auth-links -->
 
-    <a href="#">I forgot my password</a><br>
-    <a href="register.html" class="text-center">Register a new membership</a>
+    <a href="/gestao/forgot">Esqueceu a senha?</a><br>
+    <a href="register.html" class="text-center">Novo usuário</a>
 
   </div>
   <!-- /.login-box-body -->
