--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href="/categories/6">Eletro portáteis</a></li><li><a href="/categories/4">Eletrodomesticos</a></li><li><a href="/categories/1">Eletronicos</a></li><li><a href="/categories/5">Móveis</a></li>
+<li><a href="/categorias/4">Eletrodomesticos</a></li> <li><a href="/categorias/1">Eletronicos</a></li> <li><a href="/categorias/6">Eletroportáteis</a></li> <li><a href="/categorias/5">Móveis</a></li> <li><a href="/categorias/11">teste</a></li>
