--- a/views/owner/header.html
+++ b/views/owner/header.html
@@ -234,7 +234,7 @@ desired effect
           <img src="/resources/admin/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>Atanael</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
@@ -258,6 +258,7 @@ desired effect
         <!-- Optionally, you can add icons to the links -->
         <li><a href="/gestao/users"><i class="fa fa-users"></i> <span>Usuários</span></a></li>
         <li><a href="/gestao/categorias"><i class="fa fa-link"></i> <span>Categorias</span></a></li>
+        <li><a href="/gestao/produtos"><i class="fa fa-link"></i> <span>Produtos</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
             <span class="pull-right-container">
