--- a/views/category.html
+++ b/views/category.html
@@ -32,7 +32,8 @@
             </div>
             {/loop}
         </div>
-
+        
+        {if="count($pages) > 1"}
         <div class="row">
             <div class="col-md-12">
                 <div class="product-pagination text-center">
@@ -48,5 +49,7 @@
                 </div>
             </div>
         </div>
+        {/if}
+
     </div>
 </div>
