--- a/views/checkout.html
+++ b/views/checkout.html
@@ -72,33 +72,33 @@
 													</tr>
 												</thead>
 												<tbody>
-                                                    
+                                                    {loop="$products"}
 													<tr class="cart_item">
 														<td class="product-name">
-															Ship Your Idea <strong class="product-quantity">× 1</strong> 
+															{$value.desproduct} <strong class="product-quantity">× {$value.qtprod}</strong>
 														</td>
 														<td class="product-total">
-															<span class="amount">$700.00</span>
+															<span class="amount">R${function="formatNumber($value.vltotal)"}</span>
 														</td>
                                                     </tr>
-                                                    
+                                                    {/loop}
 												</tbody>
 												<tfoot>
 													<tr class="cart-subtotal">
 														<th>Subtotal</th>
-														<td><span class="amount">$700.00</span>
+														<td><span class="amount">R${function="formatNumber($cart.vlsubtotal)"}</span>
 														</td>
 													</tr>
 													<tr class="shipping">
 														<th>Frete</th>
 														<td>
-															$5.00
+															R${function="formatNumber($cart.vlfreight)"}
 															<input type="hidden" class="shipping_method" value="free_shipping" id="shipping_method_0" data-index="0" name="shipping_method[0]">
 														</td>
 													</tr>
 													<tr class="order-total">
 														<th>Total do Pedido</th>
-														<td><strong><span class="amount">$705.00</span></strong> </td>
+														<td><strong><span class="amount">R${function="formatNumber($cart.vltotal)"}</span></strong> </td>
 													</tr>
 												</tfoot>
 											</table>
