--- a/views/index.html
+++ b/views/index.html
@@ -93,7 +93,7 @@
                                     <img src="{$value.desphoto}" alt="">
                                     <div class="product-hover">
                                         <a href="/cart/{$value.idproduct}/add" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Adicionar no carrinho</a>
-                                        <a href="/produto/{$value.desurl}" class="view-details-link"><i class="fa fa-link"></i> Ver detalhes</a>
+                                        <!-- <a href="/produto/{$value.desurl}" class="view-details-link"><i class="fa fa-link"></i> Ver detalhes</a> -->
                                     </div>
                                 </div>
 
